<resources>
    <string name="app_name">Kẹt Xe 24H</string>
    <string name="title_activity_maps">Map</string>

    <string name="capquyen">Xin vui lòng cấp quyền để sử dụng hết chức năng của ứng dụng</string>

    <string name="menu_fab_tinhtrang">Tình trạng hiện tại</string>
    <string name="menu_fab_mucdo">Mức độ kẹt xe</string>

    <string name="contribution">Đóng góp</string>
    <string name="home">Trang chủ</string>
    <string name="favourite">Quan tâm</string>
    <string name="news">Tin tức</string>
    <string name="home_login_facebook">Đăng nhập với Facebook"</string>

    <string name="search_location">Tìm kiếm địa điểm</string>

    <!-- TIME TYPE -->
    <string name="second">giây</string>
    <string name="minute">phút</string>
    <string name="hour">giờ</string>
    <string name="day">ngày</string>
    <string name="week">tuần</string>
    <string name="month">tháng</string>
    <string name="year">năm</string>
    <string name="ago">trước</string>
    <string name="now">Vừa xong</string>

    <string name="choose_location_on_map">Chọn trên bản đồ</string>
    <string name="drag_or_zoom_map">Kéo bản đồ hoặc thu phóng</string>
    <string name="save">Lưu</string>
    <string name="view_details">Xem chi tiết</string>
    <string name="view_info">Xem thông tin</string>
    <string name="direct">Chỉ đường</string>
    <string name="related_location">Vị trí quan tâm</string>
    <string name="related_news">Tin tức quan tâm</string>
    <string name="add">Thêm</string>
    <string name="house">Nhà riêng</string>
    <string name="add_location_house">Thêm vị trí nhà riêng</string>
    <string name="work">Công ty</string>
    <string name="add_location_work">Thêm vị trí công ty</string>
    <string name="set_locaton_for">Đặt địa chỉ</string>
    <string name="have_set">Đã cài đặt</string>
    <string name="latest_news">Tin tức mới nhất</string>
    <string name="traffic_jam_location">Vị trí kẹt xe*</string>
    <string name="current">Hiện tại</string>
    <string name="other_choose_map">Khác (Chọn bản đồ)</string>
    <string name="level_traffic_jam">Mức độ kẹt xe*</string>
    <string name="low">Thấp</string>
    <string name="medium">Trung bình</string>
    <string name="high">Cao</string>
    <string name="detailed_description">Mô tả chi tiết</string>
    <string name="enter_content_if_available">Nhập nội dung (nếu có)</string>
    <string name="attached_information">Thông tin đính kèm*</string>
    <string name="take_photo">Chụp ảnh</string>
    <string name="video">Quay phim</string>
    <string name="gallery">Thư viện</string>
    <string name="send">Gửi</string>
    <string name="setting">Cài đặt</string>
    <string name="about_info">Về chúng tôi</string>
    <string name="feedback">Trợ giúp và phản hồi</string>
    <string name="share_app">Chia sẻ ứng dụng</string>
    <string name="other">Khác</string>
    <string name="add_other_location">Thêm vị trí khác</string>
    <string name="no">Không</string>
    <string name="yes">Có</string>
    <string name="you_have_set_location_do_you_want_modify">Bạn đã cài đặt vị trí này\nBạn có muốn thay đổi?</string>
    <string name="log_out">Đăng xuất</string>
    <string name="detailed_news">Chi tiết tin tức</string>
    <string name="thanks_for_your_contribution">Cảm ơn bạn đã đóng góp cho chúng tôi!</string>
    <string name="please_check_your_location">Vui lòng kiểm tra lại chức năng vị trí!</string>
    <string name="cant_get_detail_place">Không thể lấy chi tiết địa điểm</string>
    <string name="post_is_not_found">Không tìm thấy bài viết</string>
    <string name="there_is_not_current_infomation">Hiện tại chưa có thông tin về địa điểm</string>
    <string name="null_data">Không có dữ liệu</string>
    <string name="authentication_failed">Xác thực tài khoản không thành công!</string>
    <string name="dont_asj_again">Không hỏi lại lần nữa.</string>
    <string name="created_by">Đăng bởi</string>H
    <string name="traffic_jam_location_non_star">Vị trí kẹt xe</string>
    <string name="rating">đánh giá</string>
    <string name="stopped">Đã dừng</string>
    <string name="traffic_jam">Đang kẹt</string>
    <string name="your_location_is_not_enable_do_you_want_modify">Chức năng vị trí chưa được cài đặt\nBạn có muốn thay đổi?</string>
    <string name="you_wanna_exit">Bạn muốn thoát ứng dụng\nKẹt xe 24H?</string>
    <string name="choose_current_location">Chọn vị trí hiện tại</string>
    <string name="share">Share</string>
    <string name="completed">Xong</string>
    <string name="cancel">Hủy</string>
    <string name="current_distance">Hiện tại:</string>
    <string name="on">Bật</string>
    <string name="off">Tắt</string>
    <string name="notification">Thông báo</string>
    <string name="change_language">Đổi ngôn ngữ</string>
    <string name="distance_of_search">Khoảng cách tìm kiếm:</string>
    <string name="get_notification_from_app">nhận thông báo từ</string>
    <string name="saved_list_news">Tin đã lưu</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="guide">Hướng dẫn</string>
    <string name="start">Start</string>
    <string name="anonymous">Ẩn danh</string>
    <string name="please_login">Vui lòng đăng nhập để sử dụng chức năng này!</string>
    <string name="string_day_of_week">Theo thứ</string>
    <string name="hour_of_day">Theo giờ</string>
    <string name="ok">OK</string>
<<<<<<< HEAD
    <string name="latest_image">Hình ảnh mới nhất</string>
    <string name="you_need_upload_with_image">Bạn cần đăng kèm hình ảnh!</string>
    <string name="haven_error_please_check">Đã có lỗi xảy ra, vui lòng kiểm tra lại!</string>
=======
    <string name="detail">Chi Tiết</string>
    <string name="close_time">Đóng (%d)</string>
>>>>>>> 14f7b88eec0e0243c90f79a572166c8880dfe30e

</resources>

