<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/imv_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_dismiss"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/your_location_is_not_enable_do_you_want_modify"
            android:textColor="@color/color_main"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_about"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_no"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/custom_background_button_dialog_set_location_no"
                    android:gravity="center"
                    android:text="@string/no"
                    android:textAllCaps="true"
                    android:textColor="@color/color_no"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <Button
                    android:id="@+id/btn_yes"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/custom_background_button_dialog_set_location_yes"
                    android:gravity="center"
                    android:text="@string/yes"
                    android:textAllCaps="true"
                    android:textColor="@color/color_yes"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>