<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_info" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:padding="5dp"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatRatingBar
                            android:id="@+id/rtb_level"
                            style="@style/Base.Widget.AppCompat.RatingBar.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="5dp"
                            android:progressBackgroundTint="@color/color_main"
                            android:progressTint="@color/color_main"
                            android:secondaryProgressTint="@color/color_main" />

                        <TextView
                            android:id="@+id/tv_num_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textStyle="italic" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp">

                    <TextView
                        android:id="@+id/tv_stopped"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/custom_background_textview_stopped"
                        android:gravity="center"
                        android:text="@string/stopped"
                        android:textColor="@color/color_no"
                        android:textSize="13sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnl_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/grey">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="5dp"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:id="@+id/rl_share"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/custom_background_view_like"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imv_share"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_alignParentStart="true"
                                android:contentDescription="@null"
                                android:src="@drawable/ic_share" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:layout_toEndOf="@+id/imv_share"
                                android:gravity="center"
                                android:text="@string/share" />
                        </RelativeLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/custom_background_button_expand_details"
                        android:text="@string/view_details"
                        android:textColor="@color/color_main"
                        android:textSize="13sp"
                        android:textAllCaps="false"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>